# kjules

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakeLists.txt.bench  CMakePresets.json  README.md  check_header.py  ci_evaluation.md  diff2.txt  docker_test.sh  fix.patch  fix.sh  fix2.patch  fix2.py  fix3.patch  fix4.patch  fix6.patch  fix7.patch  fix8.patch  fix_always_show.patch  fix_always_visible.patch  fix_cpp.py  fix_filtereditor_focus.patch  fix_filtereditor_install.patch  fix_final.patch  fix_focus.patch  fix_h.diff  fix_mainwindow.cpp  fix_mainwindow.diff  fix_mainwindow.patch  fix_mainwindow.py  fix_mainwindow_script.py  fix_mainwindow_script2.py  fix_sessionmodel.py  fix_sessionmodel_methods.py  fix_sessionwindow.py  fix_sessionwindowui.py  fix_setInitialData.diff  fix_setup_ui.patch  fix_show_bug.patch  (+115 more)
.github/workflows/: build.yml  ci.yaml  clang-verification.yml
.jules/: Dockerfile.qt6  Dockerfile.qt6.opensuse
.jules/mock/: CMakeLists.txt  mock.cpp
.jules/mock/bench/: CMakeLists.txt  benchmark.cpp
.jules/mock/src/: activitybrowser.h  backupdialog.cpp  draftsmodel.cpp  draftsmodel.h  kjules.qrc  kjulesui.rc  mainwindow.cpp  mainwindow.h  newsessiondialog.h  queuemodel.cpp  queuemodel.h  savedialog.cpp  savedialog.h  sessiondelegate.cpp  sessionmodel.cpp  sessionmodel.h  sessionswindow.cpp  sessionswindow.h  sessionwindow.cpp  sessionwindow.h  settingsdialog.h  sourcemodel.h  templatedelegate.h  templateeditdialog.cpp  templateselectiondialog.h  templatesmodel.h
bench/: CMakeLists.txt  bench_apimanager.cpp  bench_sessionmodel.cpp  bench_uniqueness.cpp  benchmark.cpp  test_performance.cpp
mock-api/: go.mod  main.go
src/: activitybrowser.cpp  activitybrowser.cpp.orig  activitybrowser.h  activitylogwindow.cpp  activitylogwindow.h  advancedfilterproxymodel.cpp  advancedfilterproxymodel.h  apimanager.cpp  apimanager.h  backupdialog.cpp  backupdialog.h  blockedtreemodel.cpp  blockedtreemodel.h  clickableprogressbar.cpp  clickableprogressbar.h  createrepodialog.cpp  createrepodialog.h  draftdelegate.cpp  draftdelegate.h  draftsmodel.cpp  draftsmodel.h  errorsmodel.cpp  errorsmodel.h  errorwindow.cpp  errorwindow.h  filtereditor.cpp  filtereditor.cpp.orig  filtereditor.h  filterparser.cpp  filterparser.h  followsessiondialog.cpp  followsessiondialog.h  kjules.notifyrc  kjules.qrc  kjulesui.rc  main.cpp  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.cpp.part1  mainwindow.cpp.rej  (+57 more)
src/runner/: CMakeLists.txt  kjulesrunner.cpp  kjulesrunner.h  plasma-runner-kjules.json
tests/: CMakeLists.txt  test_advancedfilterproxymodel.cpp  test_dummy.cpp  test_filter.cpp
tests/tray_test/: CMakeLists.txt  main.cpp
