cmake_minimum_required(VERSION 3.16)
project(bench_tests)

set(CMAKE_AUTOMOC ON)
if (QT_MAJOR_VERSION STREQUAL "6")
    find_package(Qt6 COMPONENTS Core Test REQUIRED)
else()
    find_package(Qt5 COMPONENTS Core Test REQUIRED)
endif()

add_executable(benchmark benchmark.cpp)
if (QT_MAJOR_VERSION STREQUAL "6")
    target_link_libraries(benchmark Qt6::Core Qt6::Test)
else()
    target_link_libraries(benchmark Qt5::Core Qt5::Test)
endif()

add_executable(test_performance test_performance.cpp)
if (QT_MAJOR_VERSION STREQUAL "6")
    target_link_libraries(test_performance Qt6::Core Qt6::Test)
else()
    target_link_libraries(test_performance Qt5::Core Qt5::Test)
endif()

add_executable(bench_sessionmodel bench_sessionmodel.cpp)
if (QT_MAJOR_VERSION STREQUAL "6")
    target_link_libraries(bench_sessionmodel Qt6::Core Qt6::Test)
else()
    target_link_libraries(bench_sessionmodel Qt5::Core Qt5::Test)
endif()

add_executable(bench_apimanager bench_apimanager.cpp ../src/apimanager.cpp)
if (QT_MAJOR_VERSION STREQUAL "6")
    target_link_libraries(bench_apimanager Qt6::Core Qt6::Test Qt6::Network KF6::Wallet KF6::ConfigCore)
else()
    target_link_libraries(bench_apimanager Qt5::Core Qt5::Test Qt5::Network KF5::Wallet KF5::ConfigCore)
endif()
target_include_directories(bench_apimanager PRIVATE ../src)
